<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_name" />

            <TextView
                android:id="@+id/pokemonType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pokemonWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pokemon_weight" />

                <TextView
                    android:id="@+id/pokemonHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pokemon_height" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokemonHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_HP" />

            <TextView
                android:id="@+id/pokemonAttack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_attack" />

            <TextView
                android:id="@+id/pokemonDefense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_defense" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokemonSpAttack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_spattack" />

            <TextView
                android:id="@+id/pokemonSpDefense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_spdefense" />

            <TextView
                android:id="@+id/pokemonSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_speed" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
